# fridge-monitor

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-9d7fa2f4b4f2d17443bc17e2e4f03ba2e99e0a0db8f49a8e73216771ac27c118.json
migrations/: 20251204223030_create_items_table.sql  20251205000217_change_id_to_uuid.sql
src/: main.rs  models.rs
src/routes/: fridge.rs  health.rs  mod.rs
